--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="customer_tel">080-xxxx-xxxx</string>
     <string name="orderlist_title">注文情報</string>
     <string name="address_title">配達先住所</string>
-    <string name="deliveryaddress">大阪市天王寺区上本町6\-8\-4</string>
+    <string name="destination">大阪市天王寺区上本町6\-8\-4</string>
     <string name="route_title">ルート</string>
     <string name="search_route">ルート表示</string>
 
